--- a/index.html
+++ b/index.html
@@ -13,17 +13,53 @@
 </head>
 
 <body>
-    <img class="riddle" id="myImage" src="riddle1.png">
-    <img class="delete" id="front1" src="1.png">
-    <img class="delete" id="front2" src="2.png">
-    <img class="delete" id="front3" src="3.png">
-    <img class="delete" id="front4" src="4.png">
-    <img class="delete" id="front5" src="5.png">
-    <img class="delete" id="front6" src="6.png">
-    <img class="delete" id="front7" src="7.png">
-    <img class="delete" id="front8" src="8.png">
-    <img class="delete" id="front9" src="9.png">
+    <div class="center_img">
+        <img class="riddle" id="riddle" src="riddle1.png">
+        <img class="delete" id="front1" src="1.png">
+        <img class="delete" id="front2" src="2.png">
+        <img class="delete" id="front3" src="3.png">
+        <img class="delete" id="front4" src="4.png">
+        <img class="delete" id="front5" src="5.png">
+        <img class="delete" id="front6" src="6.png">
+        <img class="delete" id="front7" src="7.png">
+        <img class="delete" id="front8" src="8.png">
+        <img class="delete" id="front9" src="9.png">
+        <img class="delete" id="front10" src="10.png">
+        <img class="delete" id="front11" src="11.png">
+        <img class="delete" id="front12" src="12.png">
+        <img class="delete" id="front13" src="13.png">
+        <img class="delete" id="front14" src="14.png">
+        <img class="delete" id="front15" src="15.png">
+        <img class="delete" id="front16" src="16.png">
+        <img class="delete" id="front17" src="17.png">
+        <img class="delete" id="front18" src="18.png">
+        <img class="delete" id="front19" src="19.png">
+        <img class="delete" id="front20" src="20.png">
+        <img class="delete" id="front21" src="21.png">
+        <img class="delete" id="front22" src="22.png">
+        <img class="delete" id="front23" src="23.png">
+        <img class="delete" id="front24" src="24.png">
+        <img class="delete" id="front25" src="25.png">
+    </div>
     <!-- JSファイル読み込み -->
+
+    <p>
+        <label>謎：
+            <select id="num">
+                <option value="rid1">1</option>
+                <option value="rid2">2</option>
+                <option value="rid3">3</option>
+            </select>
+        </label>
+        <label>大きさ：
+            <select id="size">
+                <option value="size1">3*3</option>
+                <option value="size2">4*4</option>
+                <option value="size3">5*5</option>
+            </select>
+        </label>
+    </p>
+
     <script src="main.js"></script>
 </body>
 
