--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
                 <option value="rid3">3</option>
             </select>
         </label>
-        <label>大きさ：
-            <select id="size">
-                <option value="size1">3*3</option>
-                <option value="size2">4*4</option>
-                <option value="size3">5*5</option>
+        <label>横：
+            <select id="wid">
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5</option>
+            </select>
+        </label>
+        <label>縦：
+            <select id="hei">
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5</option>
             </select>
         </label>
     </p>
